--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2024"
 rocket = { version = "0.5.1", features = ["json", "secrets"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+toml = "0.8"
+figment = { version = "0.10", features = ["toml", "env"] }
 tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
 dotenvy = "0.15"
 uuid = { version = "1", features = ["serde", "v4"] }
@@ -16,7 +18,7 @@ deadpool-postgres = { version = "0.14", features = ["serde", "rt_tokio_1"] }
 password-hash = "0.5"
 argon2 = "0.5"
 tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 log = "0.4.28"
 async-trait = "0.1.89"
 validator = { version = "0.20", features = ["derive"] }
