feat: Add OpenAPI/Swagger API documentation
Add API documentation using rocket_okapi and schemars crates, serving
Swagger UI at /api/docs.

Changes:
- Add rocket_okapi, schemars, and okapi dependencies
- Add JsonSchema derive to all request/response model structs
- Add #[openapi] macro to all route handlers with appropriate tags
- Mount Swagger UI at /api/docs with spec at /api/openapi.json
- Implement OpenApiResponderInner for AppError (documents 400, 401, 404, 500)
- Implement OpenApiFromRequest for CurrentUser (documents cookie auth)
- Implement OpenApiFromData for JsonBody (documents JSON request body)

Closes #11

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,10 @@ validator = { version = "0.20", features = ["derive"] }
 thiserror = "2.0"
 # Database access with sqlx
 sqlx = { version = "0.8.6", features = ["chrono", "uuid", "migrate", "postgres", "runtime-tokio-rustls", "macros"] }
+# OpenAPI/Swagger documentation
+rocket_okapi = { version = "0.9", features = ["swagger", "rapidoc"] }
+schemars = { version = "0.8", features = ["uuid1", "chrono"] }
+okapi = { version = "0.7" }
 
 [dev-dependencies]
 proptest = "1.6"
