Fix critical security items

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,7 @@ DATABASE_URL=postgres://postgres:example@localhost:5432/budget_db
 # Logging
 # BUDGET_LOGGING_LEVEL=info
 # BUDGET_LOGGING_JSON_FORMAT=false
+
+# Rocket (required for non-debug profiles)
+# Generate with: openssl rand -base64 32
+# ROCKET_SECRET_KEY=replace-with-random-base64-32-bytes
