Fix high-severity security defaults (#72)
* Fix high-severity security defaults

* Harden auth cookie SameSite in release

* Update docs for CORS and Swagger defaults

* Document security defaults and compose requirements

* Align auth cookie helpers in tests

--- a/Budget.toml.example
+++ b/Budget.toml.example
@@ -18,6 +18,11 @@ address = "127.0.0.1"
 [api]
 base_path = "/api/v1"
 additional_base_paths = []
+enable_swagger = false
+
+[cors]
+allowed_origins = []
+allow_credentials = false
 
 [logging]
 level = "info"  # trace, debug, info, warn, error
