--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,6 @@ DATABASE_URL=postgres://postgres:example@localhost:5432/budget_db
 # BUDGET_LOGGING_LEVEL=info
 # BUDGET_LOGGING_JSON_FORMAT=false
 
-# Rocket (required)
+# Rocket (required in non-debug profiles; optional for local debug)
 # Generate with: openssl rand -base64 32
 # ROCKET_SECRET_KEY=replace-with-random-base64-32-bytes
