Fix dashboard integer decode mismatches and local env loading

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,7 @@ DATABASE_URL=postgres://postgres:example@localhost:5432/budget_db
 # Rate limiting (proxy-aware option)
 # BUDGET_RATE_LIMIT__USE_FORWARDED_IP=true
 # BUDGET_RATE_LIMIT__FORWARDED_IP_HEADER=x-forwarded-for
+# BUDGET_SESSION__COOKIE_SECURE=false
 
 # Logging
 # BUDGET_LOGGING_LEVEL=info
