--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ thiserror = "2.0"
 redis = { version = "1.0.3", features = ["aio", "connection-manager", "tokio-comp"] }
 zxcvbn = "2.2"
 # Database access with sqlx
-sqlx = { version = "0.8.6", features = ["chrono", "uuid", "migrate", "postgres", "runtime-tokio-rustls", "macros"] }
+sqlx = { version = "0.8.6", default-features = false, features = ["chrono", "uuid", "migrate", "postgres", "runtime-tokio-rustls", "macros"] }
 # OpenAPI/Swagger documentation
 rocket_okapi = { version = "0.9", features = ["swagger", "rapidoc"] }
 schemars = { version = "0.8", features = ["uuid1", "chrono"] }
