--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,19 @@ DATABASE_URL=postgres://postgres:example@localhost:5432/budget_db
 # BUDGET_SERVER_PORT=8000
 # BUDGET_SERVER_ADDRESS=127.0.0.1
 
+# API / Docs
+# BUDGET_API__BASE_PATH=/api/v1
+# BUDGET_API__EXPOSE_DOCS=false
+
+# CORS
+# BUDGET_CORS__ALLOWED_ORIGINS=["https://app.example.com"]
+# BUDGET_CORS__ALLOW_CREDENTIALS=true
+
+# Rate limiting (proxy-aware option)
+# BUDGET_RATE_LIMIT__USE_FORWARDED_IP=true
+# BUDGET_RATE_LIMIT__FORWARDED_IP_HEADER=x-forwarded-for
+# BUDGET_SESSION__COOKIE_SECURE=false
+
 # Logging
 # BUDGET_LOGGING_LEVEL=info
 # BUDGET_LOGGING_JSON_FORMAT=false
