--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,28 +1,119 @@
-# Use postgres/example user/password credentials
-# For production: use strong credentials and do not expose ports
+# Docker Compose configuration for Budget API
+# All configuration values are loaded from .env file
 
 services:
 
+  # PostgreSQL database
   db:
-    image: postgres
-    restart: always
-    # set shared memory limit when using docker compose
-    shm_size: 128mb
-    # or set shared memory limit when deploy via swarm stack
-    #volumes:
-    #  - type: tmpfs
-    #    target: /dev/shm
-    #    tmpfs:
-    #      size: 134217728 # 128*2^20 bytes = 128Mb
+    image: postgres:${POSTGRES_VERSION:-16-alpine}
+    restart: unless-stopped
+    shm_size: ${POSTGRES_SHM_SIZE:-128mb}
     environment:
-      POSTGRES_PASSWORD: example
-    ports:
-      - 5432:5432
+      POSTGRES_DB: ${POSTGRES_DB:-budget_db}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD is required}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-budget_db}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - budget_network
 
-  adminer:
-    image: adminer
-    restart: always
+  # Budget API application
+  budget:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: unless-stopped
+    depends_on:
+      db:
+        condition: service_healthy
+    environment:
+      # Database configuration
+      DATABASE_URL: postgres://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB:-budget_db}
+      BUDGET_DATABASE__MAX_CONNECTIONS: ${BUDGET_DATABASE_MAX_CONNECTIONS:-16}
+      BUDGET_DATABASE__MIN_CONNECTIONS: ${BUDGET_DATABASE_MIN_CONNECTIONS:-4}
+      BUDGET_DATABASE__CONNECTION_TIMEOUT: ${BUDGET_DATABASE_CONNECTION_TIMEOUT:-5}
+      BUDGET_DATABASE__ACQUIRE_TIMEOUT: ${BUDGET_DATABASE_ACQUIRE_TIMEOUT:-5}
+
+      # Server configuration
+      BUDGET_SERVER__PORT: ${BUDGET_SERVER_PORT:-8000}
+      BUDGET_SERVER__ADDRESS: ${BUDGET_SERVER_ADDRESS:-0.0.0.0}
+      ROCKET_PORT: ${BUDGET_SERVER_PORT:-8000}
+      ROCKET_ADDRESS: ${BUDGET_SERVER_ADDRESS:-0.0.0.0}
+
+      # API configuration
+      BUDGET_API__BASE_PATH: ${BUDGET_API_BASE_PATH:-/api/v1}
+      BUDGET_API__EXPOSE_DOCS: ${BUDGET_API_EXPOSE_DOCS:-false}
+
+      # CORS configuration
+      BUDGET_CORS__ALLOWED_ORIGINS: ${BUDGET_CORS_ALLOWED_ORIGINS:-[]}
+      BUDGET_CORS__ALLOW_CREDENTIALS: ${BUDGET_CORS_ALLOW_CREDENTIALS:-false}
+
+      # Rate limiting
+      BUDGET_RATE_LIMIT__USE_FORWARDED_IP: ${BUDGET_RATE_LIMIT_USE_FORWARDED_IP:-true}
+      BUDGET_RATE_LIMIT__FORWARDED_IP_HEADER: ${BUDGET_RATE_LIMIT_FORWARDED_IP_HEADER:-x-forwarded-for}
+
+      # Logging
+      BUDGET_LOGGING__LEVEL: ${BUDGET_LOGGING_LEVEL:-info}
+      BUDGET_LOGGING__JSON_FORMAT: ${BUDGET_LOGGING_JSON_FORMAT:-false}
+
+      # Rocket secret key (required for production)
+      ROCKET_SECRET_KEY: ${ROCKET_SECRET_KEY:?ROCKET_SECRET_KEY is required}
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:${BUDGET_SERVER_PORT:-8000}${BUDGET_API_BASE_PATH:-/api/v1}/health || exit 1"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 40s
+    networks:
+      - budget_network
+
+  # Caddy reverse proxy
+  caddy:
+    image: caddy:${CADDY_VERSION:-2-alpine}
+    restart: unless-stopped
+    depends_on:
+      budget:
+        condition: service_healthy
     ports:
-      - 8080:8080
+      - "${CADDY_HTTP_PORT:-80}:80"
+      - "${CADDY_HTTPS_PORT:-443}:443"
+      - "${CADDY_HTTPS_PORT:-443}:443/udp"
+    environment:
+      CADDY_DOMAIN: ${CADDY_DOMAIN:-localhost}
+      CADDY_LOG_LEVEL: ${CADDY_LOG_LEVEL:-INFO}
+    volumes:
+      - ./Caddyfile:/etc/caddy/Caddyfile:ro
+      - caddy_data:/data
+      - caddy_config:/config
+    networks:
+      - budget_network
+
+  # Adminer for database management (debug profile only)
+  adminer:
+    image: adminer:${ADMINER_VERSION:-latest}
+    restart: unless-stopped
+    ports:
+      - "${ADMINER_PORT:-8080}:8080"
+    environment:
+      ADMINER_DEFAULT_SERVER: db
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - budget_network
     profiles:
       - debug
+
+networks:
+  budget_network:
+    driver: bridge
+
+volumes:
+  postgres_data:
+  caddy_data:
+  caddy_config:
