--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,9 @@ DATABASE_URL=postgres://postgres:example@localhost:5432/budget_db
 # Rocket (required in non-debug profiles; optional for local debug)
 # Generate with: openssl rand -base64 32
 # ROCKET_SECRET_KEY=replace-with-random-base64-32-bytes
+
+# Cron worker container (calls POST /api/v1/cron/generate-periods)
+# CRON_SCHEDULE=*/15 * * * *
+# CRON_BASE_URL=http://budget:8000
+# CRON_API_BASE_PATH=/api/v1
+# CRON_TOKEN=replace-with-budget-cron-auth-token
