--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -34,6 +34,7 @@ services:
     environment:
       # Database configuration
       DATABASE_URL: postgres://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB:-budget_db}
+      BUDGET_DATABASE__URL: postgres://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB:-budget_db}
       BUDGET_DATABASE__MAX_CONNECTIONS: ${BUDGET_DATABASE_MAX_CONNECTIONS:-16}
       BUDGET_DATABASE__MIN_CONNECTIONS: ${BUDGET_DATABASE_MIN_CONNECTIONS:-4}
       BUDGET_DATABASE__CONNECTION_TIMEOUT: ${BUDGET_DATABASE_CONNECTION_TIMEOUT:-5}
@@ -104,9 +105,13 @@ services:
         condition: service_healthy
     environment:
       CRON_SCHEDULE: "${CRON_SCHEDULE:-*/15 * * * *}"
-      CRON_BASE_URL: ${CRON_BASE_URL:-http://budget:8000}
-      CRON_API_BASE_PATH: ${CRON_API_BASE_PATH:-/api/v1}
-      CRON_TOKEN: ${CRON_TOKEN:?CRON_TOKEN is required}
+      BUDGET_DATABASE__URL: postgres://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB:-budget_db}
+      BUDGET_DATABASE__MAX_CONNECTIONS: ${BUDGET_DATABASE_MAX_CONNECTIONS:-16}
+      BUDGET_DATABASE__MIN_CONNECTIONS: ${BUDGET_DATABASE_MIN_CONNECTIONS:-4}
+      BUDGET_DATABASE__CONNECTION_TIMEOUT: ${BUDGET_DATABASE_CONNECTION_TIMEOUT:-5}
+      BUDGET_DATABASE__ACQUIRE_TIMEOUT: ${BUDGET_DATABASE_ACQUIRE_TIMEOUT:-5}
+      BUDGET_LOGGING__LEVEL: ${BUDGET_LOGGING_LEVEL:-info}
+      BUDGET_LOGGING__JSON_FORMAT: ${BUDGET_LOGGING_JSON_FORMAT:-false}
     networks:
       - budget_network
 
