--- a/.env.example
+++ b/.env.example
@@ -38,8 +38,5 @@ DATABASE_URL=postgres://postgres:example@localhost:5432/budget_db
 # Generate with: openssl rand -base64 32
 # ROCKET_SECRET_KEY=replace-with-random-base64-32-bytes
 
-# Cron worker container (calls POST /api/v1/cron/generate-periods)
+# Cron worker container (runs local `cron` binary task)
 # CRON_SCHEDULE=*/15 * * * *
-# CRON_BASE_URL=http://budget:8000
-# CRON_API_BASE_PATH=/api/v1
-# CRON_TOKEN=replace-with-budget-cron-auth-token
