--- a/deploy/production/.env.example
+++ b/deploy/production/.env.example
@@ -11,6 +11,7 @@ BUDGET_CRON_IMAGE=ghcr.io/leocalm/budget-cron@sha256:replace-with-cron-digest
 POSTGRES_DB=budget_db
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=replace-with-strong-password
+POSTGRES_PASSWORD_URLENC=replace-with-url-encoded-postgres-password
 BUDGET_DATABASE_MAX_CONNECTIONS=16
 BUDGET_DATABASE_MIN_CONNECTIONS=4
 BUDGET_DATABASE_CONNECTION_TIMEOUT=5
@@ -18,6 +19,7 @@ BUDGET_DATABASE_ACQUIRE_TIMEOUT=5
 
 # Redis
 REDIS_PASSWORD=replace-with-strong-redis-password
+REDIS_PASSWORD_URLENC=replace-with-url-encoded-redis-password
 
 # API security
 ROCKET_SECRET_KEY=replace-with-openssl-rand-base64-32
