--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -5,7 +5,8 @@ host_key_checking = True
 retry_files_enabled = False
 interpreter_python = auto_silent
 vault_identity_list = prod@prompt
-remote_tmp = /tmp
+local_tmp = /tmp/ansible-local
+remote_tmp = ~/.ansible/tmp
 
 [ssh_connection]
 pipelining = True
