--- a/deploy/production/.env.example
+++ b/deploy/production/.env.example
@@ -6,6 +6,7 @@ CADDY_LOG_LEVEL=INFO
 # Immutable GHCR image references (prefer digests from CI artifact)
 BUDGET_API_IMAGE=ghcr.io/leocalm/budget-api@sha256:replace-with-api-digest
 BUDGET_CRON_IMAGE=ghcr.io/leocalm/budget-cron@sha256:replace-with-cron-digest
+BUDGET_IMAGE_PLATFORM=linux/amd64
 
 # Database
 POSTGRES_DB=budget_db
