--- a/ansible/inventories/production/hosts.yml
+++ b/ansible/inventories/production/hosts.yml
@@ -4,7 +4,7 @@ all:
     budget_api:
       hosts:
         piggy_pulse_prod:
-          ansible_host: 46.225.124.136
-          ansible_user: root
+          ansible_host: 10.66.0.1
+          ansible_user: deploy
           ansible_port: 22
           ansible_ssh_private_key_file: ~/.ssh/id_ed25519
