--- a/.github/workflows/publish-images.yml
+++ b/.github/workflows/publish-images.yml
@@ -151,16 +151,17 @@ jobs:
 
     steps:
       - name: Create deploy digest manifest
+        env:
+          API_IMAGE_REF: ${{ needs.publish-api.outputs.image_ref }}
+          CRON_IMAGE_REF: ${{ needs.publish-cron.outputs.image_ref }}
         run: |
-          cat > image-digests.env <<MANIFEST
-          BUDGET_API_IMAGE=${{ needs.publish-api.outputs.image_ref }}
-          BUDGET_CRON_IMAGE=${{ needs.publish-cron.outputs.image_ref }}
-          MANIFEST
-
-          cat > ansible-image-vars.yml <<ANSIBLEVARS
-          piggypulse_api_image: ${{ needs.publish-api.outputs.image_ref }}
-          piggypulse_cron_image: ${{ needs.publish-cron.outputs.image_ref }}
-          ANSIBLEVARS
+          set -euo pipefail
+          test -n "${API_IMAGE_REF}"
+          test -n "${CRON_IMAGE_REF}"
+          printf 'BUDGET_API_IMAGE=%s\n' "${API_IMAGE_REF}" > image-digests.env
+          printf 'BUDGET_CRON_IMAGE=%s\n' "${CRON_IMAGE_REF}" >> image-digests.env
+          printf 'piggypulse_api_image: %s\n' "${API_IMAGE_REF}" > ansible-image-vars.yml
+          printf 'piggypulse_cron_image: %s\n' "${CRON_IMAGE_REF}" >> ansible-image-vars.yml
 
       - name: Upload digest artifact
         uses: actions/upload-artifact@v4
