--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,9 +26,7 @@ services:
 
   # Budget API application
   budget:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: ghcr.io/leocalm/piggypulse-api:latest
     restart: unless-stopped
     depends_on:
       db:
@@ -98,9 +96,7 @@ services:
 
   # Cron worker for automatic period generation
   cron:
-    build:
-      context: .
-      dockerfile: Dockerfile.cron
+    image: ghcr.io/leocalm/piggypulse-cron:latest
     restart: unless-stopped
     depends_on:
       budget:
@@ -116,22 +112,6 @@ services:
       BUDGET_LOGGING__JSON_FORMAT: ${BUDGET_LOGGING_JSON_FORMAT:-false}
     networks:
       - budget_network
-
-  # Adminer for database management (debug profile only)
-  adminer:
-    image: adminer:${ADMINER_VERSION:-latest}
-    restart: unless-stopped
-    ports:
-      - "${ADMINER_PORT:-8080}:8080"
-    environment:
-      ADMINER_DEFAULT_SERVER: db
-    depends_on:
-      db:
-        condition: service_healthy
-    networks:
-      - budget_network
-    profiles:
-      - debug
 
 networks:
   budget_network:
