--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ executors:
   docker-builder:
     machine:
       image: ubuntu-2204:current
-    resource_class: small
+    resource_class: medium
     environment:
       DOCKER_BUILDKIT: 1
 
